--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pizza-crew-bash</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Pizza Crew</title>
+    <meta name="description" content="Mobile pizza catering for any celebration" />
+    <meta name="author" content="Pizza Crew" />
 
-    <meta property="og:title" content="pizza-crew-bash" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Pizza Crew" />
+    <meta property="og:description" content="Mobile pizza catering for any celebration" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Replace this with your own image URL -->
+    <meta property="og:image" content="/images/pizzahjerte.jpeg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@pizzacrew" />
+    <!-- Replace this with your own image URL -->
+    <meta name="twitter:image" content="/images/pizzahjerte.jpeg" />
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+    <!-- Lovable script removed here -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
