--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Mobile pizza catering for any celebration" />
     <meta property="og:type" content="website" />
     <!-- Replace this with your own image URL -->
-    <meta property="og:image" content="/images/pizzahjerte.jpeg" />
+    <meta property="og:image" content="/images/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@pizzacrew" />
