--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@pizzacrew" />
     <!-- Replace this with your own image URL -->
-    <meta name="twitter:image" content="/images/pizzahjerte.jpeg" />
+    <meta name="twitter:image" content="/images/logo.png" />
   </head>
 
   <body>
